[tool.poetry]
name = "grid-engine"
version = "0.0.1"
description = "Generate grids"
authors = ["James Evans <joesaysahoy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
numpy = "^1.26.0"
pyglet = "^2.0.9"
noise = "^1.2.2"
ipython = "^8.16.0"
pymunk = "^6.5.1"
pillow = "^10.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
